--- a/public/screen.css
+++ b/public/screen.css
@@ -10,3 +10,31 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+.card-decks {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-decks section {
+  margin: 1rem 1rem;
+}
+
+.deck-of-cards-facedown {
+  border: 3px solid black;
+  height: 15rem;
+  width: 10rem;
+  cursor: pointer;
+}
+
+.deck-of-cards-faceup {
+  border: 3px solid black;
+  height: 15rem;
+  width: 10rem;
+}
+
+.deck-of-cards-faceup ul {
+  list-style: none;
+}
