added some image for the card suits. created notes.js file for class notes. added class to ul in HTML

--- a/public/screen.css
+++ b/public/screen.css
@@ -38,3 +38,8 @@ body {
 .deck-of-cards-faceup ul {
   list-style: none;
 }
+
+.spades-card-image {
+  content: '\U+2660';
+  background-color: red;
+}
