added styles to css to test style changes per suit via JS. added to notes.js the updated scrpts with the card deck values being stored in an object.

--- a/public/screen.css
+++ b/public/screen.css
@@ -43,3 +43,19 @@ body {
   content: '\U+2660';
   background-color: red;
 }
+
+.spades {
+  color: black;
+}
+
+.hearts {
+  color: red;
+}
+
+.diamonds {
+  color: pink;
+}
+
+.clubs {
+  color: green;
+}
